# sampleTracker

./: README.md  pyproject.toml
sampletracker/: manage.py
sampletracker/samples/: admin.py  forms.py  models.py  urls.py  views.py
sampletracker/samples/migrations/: 0001_initial.py
sampletracker/sampletracker/: asgi.py  settings.py  urls.py  wsgi.py
sampletracker/templates/: base.html  home.html
sampletracker/templates/experiments/: confirm_delete.html  create_exp.html  home.html
